--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require-dev": {
         "mockery/mockery": "1.0.*",
         "phpro/grumphp": "^0.14.0",
-        "phpunit/phpunit": "~7.0"
+        "phpunit/phpunit": "~7.0",
+        "symfony/var-dumper": "^4.2"
     },
 	"autoload": {
 		"psr-4": {
